kubernetes.yml
##
# Description: kubernetes部署文件，不同项目只用修改 distribution 替换为项目名
# @Date: 2019-04-23 16:14
# @Author: jim
##
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: distribution
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
  - host: distribution.jq.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: distribution
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: distribution
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: distribution
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: distribution
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distribution
  template:
    metadata:
      labels:
        app: distribution
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
        - name: distribution
          imagePullPolicy: IfNotPresent
          image: harbor.jq.cn/library/distribution:96
          resources:
            limits:
              cpu: 0.3
              memory: 1000Mi
#          livenessProbe:
#            failureThreshold: 8
#            httpGet:
#              path: /k8s/health
#              port: 8080
#              httpHeaders:
#                - name: X-Custom-Header
#                  value: jim
#            initialDelaySeconds: 60
#            timeoutSeconds: 3
#            periodSeconds: 5
          ports:
            - containerPort: 8080
#          args:
#            - '--apollo.meta=http://apollo-svc.ops:8080'
          volumeMounts:
            - name: app-logs
              mountPath: /logs
#            - name: apiclient
#              mountPath: /opt/wxcert
#        - name: filebeat
#          image: docker.elastic.co/beats/filebeat:6.7.0
#          imagePullPolicy: IfNotPresent
#          args: [
#            "-c", "/etc/filebeat.yml",
#            "-e",
#          ]
#          env:
#            - name: POD_IP
#              valueFrom:
#                fieldRef:
#                  apiVersion: v1
#                  fieldPath: status.podIP
#            - name: ELASTICSEARCH_HOST
#              value: "elasticsearch-client.log"
#            - name: ELASTICSEARCH_PORT
#              value: "9200"
#          securityContext:
#            runAsUser: 0
#            privileged: true
#          volumeMounts:
#            - name: config
#              mountPath: /etc/filebeat.yml
#              subPath: filebeat.yml
#              readOnly: true
#            - name: app-logs
#              mountPath: /logs
      volumes:
        - name: app-logs
          emptyDir: {}
        - name: config
          configMap:
            defaultMode: 0600
            name: distribution-filebeat-config
#        - name: apiclient
#          secret:
#            defaultMode: 420
#            secretName: apiclient
